<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontEnd.LoginActivity">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/title"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            />
<com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTIL"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address">

        </com.google.android.material.textfield.TextInputEditText>



    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="Login"
            android:layout_below="@id/passWordTIL"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:onClick="onLogin"
            style="@style/standButton"
            >

        </Button>
        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonLogin"
            android:layout_centerHorizontal="true"
            android:text="@string/click_here_to_sign_up"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            style="@style/LinkText"
            android:focusable="true"
            android:onClick="onSignUp">

        </TextView>

        <ImageView
            android:id="@+id/img_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@id/signUp"
            android:src="@drawable/loading"
            >
        </ImageView>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passWordTIL"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTIL"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password">

            </com.google.android.material.textfield.TextInputEditText>




        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>


</androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/transparent_white"
        android:visibility="gone">


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>